

class Position:

    def __init__(self, ticker:str, action:str):
        self.ticker = ticker
        self.action = action

        self.entry_price = None
    